--- a/inventory.html
+++ b/inventory.html
@@ -3,4 +3,99 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Inventory | Bluelinekicks12
+  <title>Inventory | Bluelinekicks12</title>
+  <meta name="description" content="Shop Bluelinekicks12 inventory on Whatnot. Under market deals and live shows."/>
+  <link rel="icon" type="image/png" href="assets/img/logo.png"/>
+  <link rel="stylesheet" href="assets/styles.css"/>
+</head>
+<body>
+  <header class="nav">
+    <div class="container">
+      <div class="nav-inner">
+        <a class="brand" href="index.html">
+          <span class="brand-logo"><img src="assets/img/logo.png" alt="Bluelinekicks12 logo"/></span>
+          <span class="brand-text">BLUELINEKICKS12<small>Buy • Sell • Trade</small></span>
+        </a>
+
+        <button id="hamburger" class="hamburger" aria-label="Menu">MENU</button>
+
+        <nav id="navlinks" class="nav-links">
+          <a data-nav href="index.html">Home</a>
+          <a data-nav href="inventory.html">Inventory</a>
+          <a data-nav href="sell.html">Sell Us Your Shoes</a>
+          <a data-nav href="about.html">About</a>
+          <a data-nav href="contact.html">Contact</a>
+        </nav>
+
+        <div class="nav-cta">
+          <a class="btn primary" href="inventory.html">Shop Whatnot</a>
+          <a class="btn" href="sell.html">Get an Offer</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="container">
+        <div class="card">
+          <div class="kicker">Live inventory</div>
+          <h1 class="h1">Inventory on Whatnot</h1>
+          <p class="lead">
+            Shop our live listings and shows. Heat goes quick — if you see it, grab it.
+          </p>
+          <div class="hero-actions">
+            <a class="btn primary" href="https://www.whatnot.com/user/bluelinekicks12" target="_blank" rel="noopener">Open in Whatnot</a>
+            <a class="btn" href="sell.html">Sell / Trade</a>
+          </div>
+        </div>
+
+        <div class="section">
+          <div class="embed">
+            <iframe
+              title="Bluelinekicks12 Whatnot"
+              src="https://www.whatnot.com/user/bluelinekicks12"
+              style="width:100%;height:720px;border:0"
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <p class="note" style="margin-top:10px">
+            If the embed doesn’t load on some browsers, use the “Open in Whatnot” button above.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <div class="badge">© <span id="year"></span> Bluelinekicks12</div>
+          <div class="note" style="margin-top:10px;max-width:520px">
+            Built for sneakerheads who want real heat and real prices. Authenticity and condition always matter—ask us anything.
+          </div>
+        </div>
+        <div>
+          <div style="font-weight:900;margin-bottom:8px">Links</div>
+          <div class="note"><a href="inventory.html">Inventory (Whatnot)</a></div>
+          <div class="note"><a href="sell.html">Sell Us Your Shoes</a></div>
+          <div class="note"><a href="contact.html">Contact</a></div>
+          <div class="note" style="margin-top:10px">
+            Whatnot: <a href="https://www.whatnot.com/user/bluelinekicks12" target="_blank" rel="noopener">bluelinekicks12</a>
+          </div>
+          <div class="note">
+            Facebook: <a href="#" title="Add your Facebook page link here">add link</a>
+          </div>
+        </div>
+      </div>
+      <div class="glowline"></div>
+    </div>
+  </footer>
+
+  <div id="toast" class="toast" role="status" aria-live="polite"></div>
+  <script src="assets/site.js"></script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+</body>
+</html>
