--- a/about.html
+++ b/about.html
@@ -25,3 +25,93 @@
           <a data-nav href="sell.html">Sell Us Your Shoes</a>
           <a data-nav href="about.html">About
 ::contentReference[oaicite:0]{index=0}
+            </a>
+          <a data-nav href="contact.html">Contact</a>
+        </nav>
+
+        <div class="nav-cta">
+          <a class="btn primary" href="inventory.html">Shop Whatnot</a>
+          <a class="btn" href="sell.html">Get an Offer</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="container">
+        <div class="card">
+          <div class="kicker">About Bluelinekicks12</div>
+          <h1 class="h1">Real people. Real heat. Real prices.</h1>
+          <p class="lead">
+            Bluelinekicks12 was built for sneakerheads who are tired of the nonsense.
+            No fake hype. No ridiculous markups. Just authentic shoes, clear communication, and solid deals.
+          </p>
+          <div class="hero-actions">
+            <a class="btn primary" href="inventory.html">Shop Inventory</a>
+            <a class="btn" href="sell.html">Sell / Trade</a>
+          </div>
+        </div>
+
+        <div class="section">
+          <div class="grid">
+            <div class="span-6 card">
+              <h2>Our promise</h2>
+              <p class="note">
+                We respect the culture and your money. We keep pricing fair, we answer fast, and we treat people right.
+              </
+::contentReference[oaicite:0]{index=0}
+p>
+              <div class="hr"></div>
+              <div class="note"><strong>Authenticity:</strong> We care about real pairs. If you have questions, ask.</div>
+              <div class="note"><strong>Condition:</strong> We call out flaws up front.</div>
+              <div class="note"><strong>Speed:</strong> Quick offers. Quick shipping mindset.</div>
+            </div>
+
+            <div class="span-6 card">
+              <h2>Where we sell</h2>
+              <p class="note">
+                Our main live inventory is on Whatnot. That’s where you’ll see drops, steals, and live shows.
+              </p>
+              <div class="hero-actions">
+                <a class="btn primary" href="https://www.whatnot.com/user/bluelinekicks12" target="_blank" rel="noopener">Open Whatnot</a>
+                <a class="btn" href="contact.html">Contact</a>
+              </div>
+              <div class="glowline"></div>
+              <p class="note">
+                Next step: send me your Facebook page link and I’ll lock it in across the site.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <div class="badge">© <span id="year"></span> Bluelinekicks12</div>
+          <div class="note" style="margin-top:10px;max-width:520px">
+            Built for sneakerheads who want real heat and real prices. Authenticity and condition always matter—ask us anything.
+          </div>
+        </div>
+        <div>
+          <div style="font-weight:900;margin-bottom:8px">Links</div>
+          <div class="note"><a href="inventory.html">Inventory (Whatnot)</a></div>
+          <div class="note"><a href="sell.html">Sell Us Your Shoes</a></div>
+          <div class="note"><a href="contact.html">Contact</a></div>
+        </div>
+      </div>
+      <div class="glowline"></div>
+    </div>
+  </footer>
+
+  <div id="toast" class="toast" role="status" aria-live="polite"></div>
+  <script src="assets/site.js"></script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+</body>
+</html>
+
